# calculator

./: CMakeCache.txt  CMakeLists.txt  Makefile  calculator  cmake_install.cmake  gui.c  gui.h  main.c  main.h
